// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`shows delay 1`] = `
<div>
  <div>
    4 minutes late
  </div>
</div>
`;

exports[`shows delay 2`] = `
<div>
  <div>
    4 minutes early
  </div>
</div>
`;

exports[`shows delay 3`] = `
<div>
  <div>
    On time
  </div>
</div>
`;

exports[`shows delay 4`] = `
<div>
  <div>
    On time
  </div>
</div>
`;

exports[`shows delay 5`] = `<div />`;
